{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 54,
  "lineage": "a004a82c-6a7d-0a1e-9bbe-d79d14de484a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:network-acl/acl-0ae8e4e0cef029407",
            "default_network_acl_id": "acl-0ae8e4e0cef029407",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ae8e4e0cef029407",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "471112672291",
            "subnet_ids": [
              "subnet-01bc670d9047733f2",
              "subnet-07e57a1ebebad85ee",
              "subnet-0fb9df6cc19478744"
            ],
            "tags": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:route-table/rtb-052b854972ed4c5bb",
            "default_route_table_id": "rtb-052b854972ed4c5bb",
            "id": "rtb-052b854972ed4c5bb",
            "owner_id": "471112672291",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:security-group/sg-0480b27c0e051d8b3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0480b27c0e051d8b3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "471112672291",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-default",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:internet-gateway/igw-0becdf9ac1c1710e8",
            "id": "igw-0becdf9ac1c1710e8",
            "owner_id": "471112672291",
            "tags": {
              "Name": "t_abeginner",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0becdf9ac1c1710e8",
            "id": "r-rtb-04a86e30407cf7dd21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a86e30407cf7dd2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:route-table/rtb-07aa65ec61a678f08",
            "id": "rtb-07aa65ec61a678f08",
            "owner_id": "471112672291",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "t_abeginner-private-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-private-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:route-table/rtb-0b2b94388f2086679",
            "id": "rtb-0b2b94388f2086679",
            "owner_id": "471112672291",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "t_abeginner-private-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-private-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:route-table/rtb-04a86e30407cf7dd2",
            "id": "rtb-04a86e30407cf7dd2",
            "owner_id": "471112672291",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "t_abeginner-public",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-public",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0ede26ca76e0e16",
            "route_table_id": "rtb-07aa65ec61a678f08",
            "subnet_id": "subnet-0ab3b94d361533a99"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042fe159e621a8c4e",
            "route_table_id": "rtb-0b2b94388f2086679",
            "subnet_id": "subnet-07e57a1ebebad85ee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06aec7a81e29ecf00",
            "route_table_id": "rtb-04a86e30407cf7dd2",
            "subnet_id": "subnet-01bc670d9047733f2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03835d0babd6f29c8",
            "route_table_id": "rtb-04a86e30407cf7dd2",
            "subnet_id": "subnet-0fb9df6cc19478744"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:subnet/subnet-0ab3b94d361533a99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab3b94d361533a99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112672291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t_abeginner-private-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-private-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:subnet/subnet-07e57a1ebebad85ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.100.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e57a1ebebad85ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112672291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t_abeginner-private-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-private-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:subnet/subnet-01bc670d9047733f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bc670d9047733f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112672291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t_abeginner-public-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-public-ap-southeast-2a",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:subnet/subnet-0fb9df6cc19478744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb9df6cc19478744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112672291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t_abeginner-public-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner-public-ap-southeast-2b",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "vpc_id": "vpc-0bc6bb4a586cf58e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:471112672291:vpc/vpc-0bc6bb4a586cf58e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0ae8e4e0cef029407",
            "default_route_table_id": "rtb-052b854972ed4c5bb",
            "default_security_group_id": "sg-0480b27c0e051d8b3",
            "dhcp_options_id": "dopt-0807cf1ac279cf33d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc6bb4a586cf58e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052b854972ed4c5bb",
            "owner_id": "471112672291",
            "tags": {
              "Name": "t_abeginner",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            },
            "tags_all": {
              "Name": "t_abeginner",
              "created_by": "adevopsbeginner",
              "deployment": "terraform",
              "link": "https://www.youtube.com/@adevopsbeginner"
            }
          }
        }
      ]
    }
  ]
}